src/components/Banner/Banner.css
.container {
  max-width: 96%;
  position: relative;
  z-index: inherit;
}

.btn:focus,
.form-control:focus {
  /* border: transparent; */
  box-shadow: none;
}

.banner-section .section {
  padding: 5% 0;
  position: relative;
  z-index: 0;
}

.banner-section .bg__holder {
  position: absolute;
  inset: 0;
  z-index: -1;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow: hidden;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
}

.bg__holder .bg__video {
  -o-object-fit: cover;
  object-fit: cover;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.you-btn {
  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 100%);
  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 100%);
  padding: 0.375rem 1.5rem;
  border-radius: 50rem;
  color: #ffffff;
  text-decoration: none;
  font-family: "Poppins", sans-serif;
  font-size: 1.0625rem;
  font-weight: 700;
  text-align: center;
  text-transform: capitalize;
  -webkit-transition: all 300ms ease;
  transition: all 300ms ease;
  display: inline-block;
}

.you-btn:hover {
  color: #ffffff;
  background-image: -webkit-linear-gradient(112deg, #7802af 0%, #0cc6ef 90%);
  background-image: linear-gradient(-22deg, #7802af 0%, #0cc6ef 90%);
}

/* Hero */
.hero {
  position: relative;
  min-height: 100vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: flex-start;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.hero::before {
  position: absolute;
  content: "";
  width: 280px;
  height: 264px;
  /* border: 1px solid white; */
  /* background-image: url("../../assets/images/hero-char.png"); */
  background-image: url("../../assets/images/man-removebg.png");
  background-repeat: no-repeat;
  background-size: 120%;
  background-position: center;
  left: 4%;
  bottom: -1%;
  z-index: 0;
}

.hero .hero-char {
  max-width: 100%;
  height: auto;
  -o-object-fit: cover;
  object-fit: cover;
  -o-object-position: center;
  object-position: center;
}

.hero .hero__content {
  text-align: center;
  max-width: 650px;
  margin-left: auto;
}

.hero__content .hero__logo {
  max-width: 90%;
  margin: 0 auto 1rem;
  height: auto;
  display: block;
}

.heading__1 {
  font-size: calc(1.8rem + 1vmin);
  font-weight: 700;
  font-family: "Montserrat", sans-serif;
}

.hero__content .heading__1 {
  -webkit-filter: drop-shadow(0 0 4px rgba(16, 0, 50, 0.6));
  filter: drop-shadow(0 0 4px rgba(16, 0, 50, 0.6));
  color: var(--blue-100, #01eaff);
}

.para {
  font-size: calc(0.75rem + 1vmin);
  color: var(--white, #ffffff);
  font-family: "Montserrat", sans-serif;
  margin-bottom: 1.25rem;
}

.hero__content .para {
  -webkit-filter: drop-shadow(0 0 4px rgba(16, 0, 50, 0.85));
  filter: drop-shadow(0 0 4px rgba(16, 0, 50, 0.85));
  font-weight: 600;
  margin-bottom: 2.5rem;
}

.token-search {
  margin-bottom: 2rem;
}

.token-search .input-group {
  background-color: transparent;
  gap: 0.3125rem;
}

.token-search .input-group > * {
  font-size: calc(0.75rem + 1vmin);
  font-weight: 600;
  color: #223087;
}

.token-search .input-group > .form-control:first-of-type {
  border-radius: 1.125rem 0 0 1.125rem;
}

.token-search .input-group > .input-group-text:last-of-type {
  border-radius: 0 1.125rem 1.125rem 0;
  cursor: pointer;
}

.token-search .input-group > .input-group-text > * {
  height: 1.5rem;
  width: auto;
  -o-object-fit: cover;
  object-fit: cover;
  -o-object-position: center;
  object-position: center;
}
#copy-btn img {
  max-width: 21px;
}
.hero__content .button-group {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.875rem;
}

.hero__content .button-group .you-btn {
  border-radius: 0.875rem;
  background-image: -webkit-linear-gradient(103deg, #ef00ff 0%, #0bc7ef 100%);
  background-image: linear-gradient(-13deg, #ef00ff 0%, #0bc7ef 100%);
}
/*Responsive css*/
/* Small Devices */
@media screen and (min-width: 576px) {
  /* Hero */
  .hero::before {
    width: 500px;
    height: 564px;
    bottom: -3.375rem;
  }
  .hero__content .button-group .you-btn {
    min-width: 146px;
    max-width: 185px;
  }
}
@media screen and (max-width: 576px) {
  /* Hero */
  .banner-section .section {
    padding: 20% 0;
  }
}
/* Medium Devices */
@media screen and (min-width: 768px) {
  /* Hero */
  .hero::before {
    width: 700px;
    height: 764px;
    left: 4%;
    bottom: -4.25rem;
  }
}

/* Extra Large Devices */
@media screen and (min-width: 1200px) {
  /* Hero */
  .hero .hero__content {
    margin-right: unset;
  }
}

@media (min-width: 800px) {
  #hero #heroCont {
    height: 80vh;
  }
  #hero {
    padding-inline: 80px;
  }
  #herotext {
    align-self: flex-end;
  }
}

